# recursive-let-plugin

./: .sosrc  README.md  default.nix  recursive-let-plugin.cabal
examples/: P1.hs
nix/: sources.json
src/: RecursiveLetPlugin.hs
