name:                recursive-let-plugin
synopsis:            DRY
version:             0.0.1.0
homepage:            https://github.com/utdemir/recursive-let-plugin
license:             BSD3
author:              Utku Demir
maintainer:          Utku Demir
copyright:           Utku Demir
category:            Language.Haskell
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:         -Wall -Wpartial-fields -Wincomplete-record-updates -Widentities
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     RecursiveLetPlugin
  build-depends:       base >= 4.11 && < 5
                     , ghc >= 8.10.0 && < 9
                     , syb
                     , containers
                     , transformers
